--- a/cover.html
+++ b/cover.html
@@ -9,7 +9,7 @@
 <body>
     <header>
         <div class="container">
-            <h1>John Doe</h1>
+            <h1>Singo Cynthia</h1>
             <nav>
                 <ul>
                     <li><a href="#about">About</a></li>
@@ -23,7 +23,13 @@
     <section id="about">
         <div class="container">
             <h2>About Me</h2>
-            <p>I am a passionate web developer with a focus on front-end development. I love creating user-friendly and visually appealing websites.</p>
+            <p>I'm a passionate software developer with a love for building innovative solutions that make a difference.
+                My journey of becoming and being a software developer has been an amaizing one,I have grown in the world tech so much 
+                and also found peace in it.I love coding so much that it has become a part of my life and i do not see myself
+                in another field except this one of tech.I can't wait to explore more in tech with bigger people and bigger tech companies.
+                I'm a very very intiligent person with high problem solving skills and I love challenging myself so much to see how far 
+                my mind can go.I'm a strong believer in collaboration and teamwork,and I've had the privilege of working with talented individuals
+                from diverse backgrounds.</p>
         </div>
     </section>
 
@@ -54,7 +60,7 @@
 
     <footer>
         <div class="container">
-            <p>&copy; 2024 John Doe</p>
+            <p>&copy; 2024 Singo Cynthia</p>
         </div>
     </footer>
 </body>
